// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ReferenceToolbar /> > should not render creation button when [canCreate=false] 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[MockFunction spy]}
    placeholder="Reference name"
    value=""
  />
</Toolbar>
`;

exports[`<ReferenceToolbar /> > should render creation button when [canCreate=true] 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[MockFunction spy]}
    placeholder="Reference name"
    value=""
  />
  <LinkButton
    color="blue"
    tip="Create"
    to={
      {
        "pathname": "/refs/add",
        "state": {
          "emptyReference": true,
          "newReference": true,
        },
      }
    }
  >
    <Icon
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;

exports[`<ReferenceToolbar /> > should render when [term='foo'] 1`] = `
<Toolbar>
  <ForwardRef
    onChange={[MockFunction spy]}
    placeholder="Reference name"
    value="foo"
  />
  <LinkButton
    color="blue"
    tip="Create"
    to={
      {
        "pathname": "/refs/add",
        "state": {
          "emptyReference": true,
          "newReference": true,
        },
      }
    }
  >
    <Icon
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;
